Adding homepage img & updating index to show img

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>My Recipes</title>
             <body>
             <h1>Odin Recipes</h1>
+            <img src="./img/cooks.jpeg" alt="A lady cooking">
+            <p></p>
             <a href="./recipes/mac-and-cheese.html">Baked Mac & Cheese</a>
             </body>
     </head>
