Formatting the existing files

--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Baked Mac & Cheese</title>
@@ -21,10 +22,11 @@
         <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 2-quart baking dish.</li>
         <li>Boil macaroni in a large pot of salted water until barely done, about 5 minutes. Drain and set aside.</li>
         <li>Whisk together milk and egg in a large bowl. Stir in cheese and butter.</li>
-        <li>Place par-boiled macaroni in the prepared baking dish. Pour milk mixture over macaroni, season with salt and pepper, and stir until combined. Press mixture evenly into the baking dish.</li>
+        <li>Place par-boiled macaroni in the prepared baking dish. Pour milk mixture over macaroni, season with salt and
+            pepper, and stir until combined. Press mixture evenly into the baking dish.</li>
         <li>Bake, uncovered, in the preheated oven until top is browned, 30 to 40 minutes.</li>
     </ol>
 </body>
 </head>
-</html>
 
+</html>
