--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <h1>Odin Recipes</h1>
     <img src="./img/cooks.jpeg" alt="A lady cooking">
     <p></p>
-    <a href="./recipes/mac-and-cheese.html">Baked Mac & Cheese</a>
+    <ul>
+    <li><a href="./recipes/mac-and-cheese.html">Baked Mac & Cheese</a></li>
+    <li><a href="./recipes/waffles.html">Waffles</a></li>
+    <li><a href="./recipes/lemon-chicken.html">Slow Cooker Lemon Garlic Chicken</a></li>
+</ul>
 </body>
 </head>
 
